<resources>
    <string name="app_name">MySchool</string>
    <string name="login">Login</string>
    <string name="school_emblem">School Emblem</string>
    <string name="my_terms">My Terms</string>
    <string name="term_title">Term Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dash">-</string>
    <string name="status">Status</string>
    <string name="course_title">Course Title</string>
    <string name="note">Note</string>
    <string name="assessments">Assessments</string>
    <string name="optional_note_for_the_course">Optional note for the course.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="courses">Courses</string>
    <string name="delete_all_terms">Delete All Terms</string>
    <string name="add_term">Add Term</string>
    <string name="add_course">Add Course</string>
    <string name="add_a_course_to_save_the_term">This term has no courses.\nAdd a course to save the term.</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="my_school_instructors">My School Instructors</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">Add new item</string>
    <string name="phone_hint">123-456-7890</string>
    <string name="email_hint">instructor.email@myschool.com</string>
    <string name="save_item">Save</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="ok">OK</string>
    <string name="delete_term_and_courses">Deleting the term also deletes all associated courses.\nAre you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="plan_to_take">Plan to take</string>
    <string name="in_progress">In progress</string>
    <string name="complete">Complete</string>
    <string name="dropped">Dropped</string>
    <string name="instructor_s">Instructor(s)</string>
    <string name="assessment_s">Assessment(s)</string>
    <string name="optional_note">(Optional)</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="type">Type</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="description">Description</string>
    <string name="assessment_description">Assessment description</string>
    <string name="no_instructors">This course has no Instructors.\nAdd an Instructor to save.</string>
    <string name="no_assessments">This course has no assessments.\nAdd an assessment to save.</string>
    <string name="course_channel_name">Course Reminders</string>
    <string name="course_channel_desc">Reminders for the course start and end dates.</string>
    <string name="assessment_channel_name">Assessment Reminders</string>
    <string name="assessment_channel_desc">Reminders for the assessment start and end dates.</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="share">Share</string>
</resources>