<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_detail_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_item"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/menu_detail_notifications">

        <item
            android:id="@+id/menu_detail_setNotification"
            android:icon="@drawable/ic_notification_off"
            android:title="@string/set_reminder"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_detail_cancelNotification"
            android:icon="@drawable/ic_notification_active"
            android:title="@string/cancel_reminder"
            android:visible="false"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menu_detail_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_detail_delete"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/delete_item"
        app:showAsAction="never" />
</menu>