<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/course_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_item_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/start_date"
            app:layout_constraintEnd_toStartOf="@+id/course_item_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_item_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/end_date"
            app:layout_constraintStart_toStartOf="@+id/course_item_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_item_date_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            app:layout_constraintEnd_toStartOf="@+id/course_item_end"
            app:layout_constraintStart_toEndOf="@+id/course_item_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_item_assessment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assessments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_item_title" />

        <TextView
            android:id="@+id/course_item_note_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_item_assessment_header"/>

        <TextView
            android:id="@+id/course_item_note_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional_note_for_the_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_item_note_header" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/course_item_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>