<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:id="@+id/assessment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/assessment_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assessment_type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="@+id/assessment_type_radioGroup"
            app:layout_constraintStart_toStartOf="@+id/assessment_type_radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/assessment_title" />

        <RadioGroup
            android:id="@+id/assessment_type_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/assessment_start"
            app:layout_constraintTop_toBottomOf="@+id/assessment_type_header">

            <RadioButton
                android:id="@+id/assessment_type_objective_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objective" />

            <RadioButton
                android:id="@+id/assessment_type_performance_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performance" />
        </RadioGroup>

        <TextView
            android:id="@+id/assessment_start_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_date"
            app:layout_constraintEnd_toEndOf="@+id/assessment_start"
            app:layout_constraintStart_toStartOf="@+id/assessment_start"
            app:layout_constraintTop_toBottomOf="@+id/assessment_type_radioGroup" />

        <EditText
            android:id="@+id/assessment_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="6"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessment_start_header"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/assessment_end_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            app:layout_constraintEnd_toEndOf="@+id/assessment_end"
            app:layout_constraintStart_toStartOf="@+id/assessment_end"
            app:layout_constraintTop_toTopOf="@+id/assessment_start_header" />

        <EditText
            android:id="@+id/assessment_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="6"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/assessment_start"
            app:layout_constraintTop_toBottomOf="@+id/assessment_end_header"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/assessment_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/assessment_description"
            app:layout_constraintStart_toStartOf="@+id/assessment_description"
            app:layout_constraintTop_toBottomOf="@+id/assessment_start" />

        <EditText
            android:id="@+id/assessment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/assessment_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessment_description_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>