<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.terms.DetailedTermActivity">

    <TextView
        android:id="@+id/detailed_term_date_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_dash"
        app:layout_constraintBottom_toTopOf="@+id/detailed_term_course_header"
        app:layout_constraintEnd_toStartOf="@+id/detailed_term_end"
        app:layout_constraintStart_toEndOf="@+id/detailed_term_start" />

    <TextView
        android:id="@+id/detailed_term_start_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/detailed_term_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailed_term_end_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/end"
        app:layout_constraintStart_toStartOf="@+id/detailed_term_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailed_term_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/start_date"
        app:layout_constraintEnd_toStartOf="@+id/detailed_term_guideline"
        app:layout_constraintTop_toBottomOf="@+id/detailed_term_start_header" />

    <TextView
        android:id="@+id/detailed_term_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="@+id/detailed_term_guideline"
        app:layout_constraintTop_toBottomOf="@+id/detailed_term_end_header" />

    <TextView
        android:id="@+id/detailed_term_course_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_term_start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailed_term_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_term_course_header"
        tools:listitem="@layout/course_item" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailed_term_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />


</androidx.constraintlayout.widget.ConstraintLayout>